--- a/vignettes/MultipleToOne.Rmd
+++ b/vignettes/MultipleToOne.Rmd
@@ -26,6 +26,7 @@ suppressPackageStartupMessages({
   library("GenomicBreaks")
   library("ggplot2")
   library("BreakpointsData")
+  library("patchwork")
 })
 genomes <- OikScrambling:::loadAllGenomes(compat = FALSE)
 
@@ -321,7 +322,7 @@ The strategy above combines the multiple-to-one regions into single continuous s
 
 Now, examine the overlaps of one-to-one and non-one-to-one regions with different alignment categories. How do many-to-many alignments correspond to different alignment categories? First, some functions to make this easier.
 
-```{r flagging_correspondence_3, fig.width=8, fig.height=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+```{r flagging_correspondence_3, fig.height=8, fig.width=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 compare_m2o_wgo <- function(pair, m2o_obj, m2o_align, m2o_category="one_to_one", wgo_obj) {
   many2one <- m2o_obj[[m2o_align]][[pair]]
   many2one <- many2one[many2one$correspondence == m2o_category]
@@ -358,12 +359,9 @@ compare_m2o_wgo_all <- function(pair, m2o_obj, m2o_align, wgo){
 
 Then, some plots.
 
-```{r flagging_correspondence_4, fig.width=8, fig.height=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+```{r flagging_correspondence_4, fig.height=8, fig.width=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 # Okinawa
-tmp <- do.call(
-  rbind,
-  lapply(list("Oki_Osa", "Oki_Bar", "Oki_Kum"), function(pair) compare_m2o_wgo_all(pair, m2o_gr, "original01", wgo))
-)
+tmp <- do.call(rbind, lapply(list("Oki_Osa", "Oki_Bar", "Oki_Kum"), function(pair) compare_m2o_wgo_all(pair, m2o_gr, "original01", wgo)))
 tmp$pair <- factor(tmp$pair, levels=c("Oki_Osa", "Oki_Bar", "Oki_Kum"))
 
 p1 <- ggplot(tmp) + aes(x=m2o_category, y=percent_within_m2o_category, fill=alignment_category) + geom_bar(stat='identity', position='stack') + facet_grid(~pair)
@@ -383,7 +381,7 @@ tmp$pair <- factor(tmp$pair, levels=c("Bar_Oki", "Bar_Osa", "Bar_Nor"))
 p3 <- ggplot(tmp) + aes(x=m2o_category, y=percent_within_m2o_category, fill=alignment_category) + geom_bar(stat='identity', position='stack') + facet_grid(~pair)
 p3 + ggtitle("Barcelona: alignment categories vs. many-to-many alignments")
 
-(p1/p2/p3)
+( p1 / p2 / p3 )
 
 ```
 
@@ -405,8 +403,8 @@ rbind(
   compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("one_to_one"), gb=coa$Oki_Osa[coa$Oki_Osa$nonCoa==TRUE], gb_name="isolated alignment"),
   compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("many_to_many"),  gb=coa$Oki_Osa[coa$Oki_Osa$nonCoa==TRUE], gb_name="isolated alignment"),
   
-  compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("one_to_one"), gb=unal$Oki_Osa, gb_name="breakpoint region"),
-  compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("many_to_many"), gb=unal$Oki_Osa, gb_name="breakpoint region"),
+  compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("one_to_one"), gb=wgo$Oki_Osa[wgo$Oki_Osa$type=='breakpoint region'], gb_name="breakpoint region"),
+  compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("many_to_many"), gb=wgo$Oki_Osa[wgo$Oki_Osa$type=='breakpoint region'], gb_name="breakpoint region"),
   
   compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("one_to_one"), gb=bri$Oki_Osa, gb_name="bridge region"),
   compare_m2o_gb(pair="Oki_Osa", m2o_obj=m2o_gr, m2o_align="original01", m2o_category=c("many_to_many"), gb=bri$Oki_Osa, gb_name="bridge region")
@@ -416,18 +414,26 @@ rbind(
 How much of each genome pair is neither one-to-one, nor one-to-many, nor many-to-many?
 
 ```{r flagging_correspondence_7}
-unaligned_but_corresponding <- sapply(names(m2o_gr$original01), function(pair) {
-  subsetByOverlaps(unal[[pair]], m2o_gr$original01[[pair]], invert=F) |> width() |> sum()
-})
-(unaligned_but_corresponding)
+wgo_breaks <- sapply(wgo, function(s) s[s$type=='breakpoint region'] |> width() |> sum())
+(wgo_breaks)
 
-unaligned_not_corresponding <-sapply(names(m2o_gr$original01), function(pair) {
-  subsetByOverlaps(unal[[pair]], m2o_gr$original01[[pair]], invert=T) |> width() |> sum()
+breakpoints_with_some_alignment <- sapply(names(m2o_gr$original01), function(pair) {
+  subsetByOverlaps(wgo[[pair]][wgo[[pair]]$type=='breakpoint region'], m2o_gr$original01[[pair]], invert=F) |> width() |> sum()
 })
-(unaligned_not_corresponding)
+(breakpoints_with_some_alignment)
 
-(unaligned_not_corresponding/(unaligned_not_corresponding+unaligned_but_corresponding)*100)
-(unaligned_but_corresponding/(unaligned_not_corresponding+unaligned_but_corresponding)*100)
+breakpoints_without_any_alignment <-sapply(names(m2o_gr$original01), function(pair) {
+  subsetByOverlaps(wgo[[pair]][wgo[[pair]]$type=='breakpoint region'], m2o_gr$original01[[pair]], invert=T) |> width() |> sum()
+})
+(breakpoints_without_any_alignment)
+
+wgo_breaks <- wgo_breaks[names(wgo_breaks) %in% names(breakpoints_with_some_alignment)]
+wgo_breaks <- wgo_breaks[match( names(breakpoints_without_any_alignment), names(wgo_breaks))]
+
+# Fraction of breakpoint regions with some alignments.
+(breakpoints_with_some_alignment/(wgo_breaks)*100)
+# Fraction of breakpoint regions without any alignments.
+(breakpoints_without_any_alignment/(wgo_breaks)*100)
 
 ```
 
@@ -437,7 +443,7 @@ In the following, I create some functions for visualising the distribution of al
 
 `binWidth` sets a constant bin size, while `nIntervals` sets a number of intervals to divide `start` into. Using this approach, the short and long arms or chromosomes will always have different numbers of observations.
 
-```{r plot_correspondence_1, fig.width=8, fig.height=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+```{r plot_correspondence_1, fig.height=8, fig.width=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 # Function to transform a GBreaks into a tibble counting up X-to-X correspondence values.
 categories_m2o <- function(gb, nIntervals=NULL, binWidth=NULL) {
   gb$seqnames_arm <- paste0(seqnames(gb), "_", gb$Arm)
@@ -457,7 +463,7 @@ categories_m2o <- function(gb, nIntervals=NULL, binWidth=NULL) {
 
 Now make some plots with these values, showing the distribution of many-to-many-ness across the genome.
 
-```{r plot_correspondence_1, fig.width=8, fig.height=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+```{r plot_correspondence_2, fig.height=8, fig.width=12, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 plot_categories_m2o <- function(gb, arms, nIntervals=25, binWidth=NULL, plot.what='n'){
   if(!is.null(nIntervals)){
     df <- categories_m2o(flagLongShort(gb, arms), nIntervals=nIntervals)
@@ -480,7 +486,7 @@ plot_categories_m2o <- function(gb, arms, nIntervals=25, binWidth=NULL, plot.wha
 plot_categories_m2o(m2o_gr$original01$Oki_Osa |> plyranges::filter(seqnames != 'YSR'), longShort$OKI2018.I69, nIntervals=25, plot.what='w_sum') + ggtitle("Okinawa-Osaka: alignment types across genome")
 ```
 
-```{r plot_correspondence_2, fig.height=8, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
+```{r plot_correspondence_3, fig.height=8, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 p1 <- plot_categories_m2o(m2o_gr$original01$Oki_Osa |> plyranges::filter(seqnames != 'YSR'), longShort$OKI2018.I69, nIntervals=25, plot.what='w_sum') + ggtitle('Oki-Osa: original01 alignment')
 p2 <- plot_categories_m2o(m2o_gr$original01$Oki_Bar |> plyranges::filter(seqnames != 'YSR'), longShort$OKI2018.I69, nIntervals=25, plot.what='w_sum') + ggtitle('Oki-Bar: original01 alignment')
 p3 <- plot_categories_m2o(m2o_gr$original01$Oki_Kum |> plyranges::filter(seqnames != 'YSR'), longShort$OKI2018.I69, nIntervals=25, plot.what='w_sum') + ggtitle('Oki-Kum: original01 alignment')
@@ -488,7 +494,7 @@ p3 <- plot_categories_m2o(m2o_gr$original01$Oki_Kum |> plyranges::filter(seqname
 ( p1 / p2 / p3 )
 ```
 
-```{r plot_correspondence_3, fig.height=8, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
+```{r plot_correspondence_4, fig.height=8, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 plot_categories_m2o_allAlignments <- function(pair, arms, m2o, nIntervals=NULL, binWidth=NULL, plot.what='w_sum') {
   p1 <- plot_categories_m2o(m2o$original01[[pair]]  |> plyranges::filter(seqnames != 'YSR'), arms, nIntervals=nIntervals, binWidth=binWidth, plot.what=plot.what) + ggtitle(paste0(pair, ": original01 alignment"))
   p2 <- plot_categories_m2o(m2o$split03[[pair]]  |> plyranges::filter(seqnames != 'YSR'), arms, nIntervals=nIntervals, binWidth=binWidth, plot.what=plot.what) + ggtitle(paste0(pair, ": split03 alignment"))
