--- a/vignettes/ScalingBreakpoints.Rmd
+++ b/vignettes/ScalingBreakpoints.Rmd
@@ -133,7 +133,10 @@ mya_df <- rbind(
   bp_vs_dist(query="Dme", target="Dma", wgo$Dme_Dma, dist_type="mya", "Drosophila"),
   bp_vs_dist(query="Dme", target="Dya", wgo$Dme_Dya, dist_type="mya", "Drosophila")
 )
-
+mya_df$species <- factor(mya_df$species, levels=sort(mya_df$species))
+mya_df <- mya_df[order(mya_df$species, mya_df$breakpoints_per_mbp_scaled),]
+rownames(mya_df) <- NULL
+mya_df$pair <- factor(mya_df$pair, levels=mya_df$pair)
 (mya_df)
 
 sub_df <- rbind(
@@ -150,12 +153,15 @@ sub_df <- rbind(
   bp_vs_dist(query="Dme", target="Dma", wgo$Dme_Dma, dist_type="cophenetic", "Drosophila"),
   bp_vs_dist(query="Dme", target="Dya", wgo$Dme_Dya, dist_type="cophenetic", "Drosophila")
 )
+sub_df$species <- factor(sub_df$species, levels=sort(sub_df$species))
+sub_df <- sub_df[order(sub_df$species, sub_df$breakpoints_per_mbp_scaled),]
+rownames(sub_df) <- NULL
+sub_df$pair <- factor(sub_df$pair, levels=sub_df$pair)
 (sub_df)
 ```
 
 
-
-```{r breakpoints_2, dependson="breakpoints_1", fig.height=6, fig.width=8, message=FALSE, warning=FALSE, dev=c("svg", "png")}
+```{r breakpoints_2, dependson="breakpoints_1", fig.height=4, fig.width=8, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 ggplot(mya_df) + aes(x=pair, y=breakpoints, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints")
 ggplot(mya_df) + aes(x=pair, y=breakpoints_per_mbp, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned")
 ggplot(mya_df) + aes(x=pair, y=breakpoints_per_mbp_scaled, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned per million years diverged")
