--- a/vignettes/ScalingBreakpoints.Rmd
+++ b/vignettes/ScalingBreakpoints.Rmd
@@ -111,10 +111,11 @@ bp_vs_dist <- function(query, target, wgo, dist_type="mya", species){
   breakpoints <- wgo[wgo$type == "breakpoint region"]
   wgo_size <- wgo |> width() |> sum()
   wgo_size_mbp <- wgo_size/1000000
+  breakpoints_per_scale = length(breakpoints)/relevant_dist
   breakpoints_per_mbp = length(breakpoints)/wgo_size_mbp
   breakpoints_per_mbp_per_dist = breakpoints_per_mbp/relevant_dist
   
-  breakpoint_df <- data.frame(species=species, query=query, target=target, pair=paste0(query, "_", target), dist_type=dist_type, dist=relevant_dist, breakpoints=length(breakpoints), breakpoints_per_mbp=breakpoints_per_mbp, breakpoints_per_mbp_scaled=breakpoints_per_mbp_per_dist)
+  breakpoint_df <- data.frame(species=species, query=query, target=target, pair=paste0(query, "_", target), dist_type=dist_type, dist=relevant_dist, breakpoints=length(breakpoints), breakpoints_per_scale=breakpoints_per_scale, breakpoints_per_mbp=breakpoints_per_mbp, breakpoints_per_mbp_scaled=breakpoints_per_mbp_per_dist)
   
   breakpoint_df
 }
@@ -163,12 +164,63 @@ sub_df$pair <- factor(sub_df$pair, levels=sub_df$pair)
 
 ```{r breakpoints_2, dependson="breakpoints_1", fig.height=4, fig.width=8, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 ggplot(mya_df) + aes(x=pair, y=breakpoints, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints")
+ggplot(mya_df) + aes(x=pair, y=breakpoints_per_scale, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per million years")
 ggplot(mya_df) + aes(x=pair, y=breakpoints_per_mbp, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned")
 ggplot(mya_df) + aes(x=pair, y=breakpoints_per_mbp_scaled, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned per million years diverged")
 
 ggplot(sub_df) + aes(x=pair, y=breakpoints_per_mbp_scaled, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned per substitution distance")
 ```
 
+
+As above, but with same-population comparisons removed.
+```{r breakpoints_3, dependson="breakpoints_1", fig.height=4, fig.width=8, message=FALSE, warning=FALSE, dev=c("svg", "png")}
+mya_df <- rbind(
+  bp_vs_dist(query="Oki", target="Osa", wgo$Oki_Osa, dist_type="mya", "Oikopleura"),
+  bp_vs_dist(query="Oki", target="Bar", wgo$Oki_Bar, dist_type="mya", "Oikopleura"),
+  bp_vs_dist(query="Osa", target="Bar", wgo$Osa_Bar, dist_type="mya", "Oikopleura"),
+  
+  bp_vs_dist(query="Ply", target="Rob", wgo$Ply_Rob, dist_type="mya", "Ciona"),
+  bp_vs_dist(query="Ply", target="Sav", wgo$Ply_Sav, dist_type="mya", "Ciona"),
+  bp_vs_dist(query="Rob", target="Sav", wgo$Rob_Sav, dist_type="mya", "Ciona"),
+  
+  bp_vs_dist(query="Dme", target="Dbu", wgo$Dme_Dbu, dist_type="mya", "Drosophila"),
+  bp_vs_dist(query="Dme", target="Dsu", wgo$Dme_Dsu, dist_type="mya", "Drosophila"),
+  #bp_vs_dist(query="Dme", target="Dma", wgo$Dme_Dma, dist_type="mya", "Drosophila"),
+  bp_vs_dist(query="Dme", target="Dya", wgo$Dme_Dya, dist_type="mya", "Drosophila")
+)
+mya_df$species <- factor(mya_df$species, levels=c("Drosophila", "Ciona", "Oikopleura"))
+mya_df <- mya_df[order(mya_df$species, mya_df$breakpoints_per_mbp_scaled),]
+rownames(mya_df) <- NULL
+mya_df$pair <- factor(mya_df$pair, levels=mya_df$pair)
+(mya_df)
+
+sub_df <- rbind(
+  bp_vs_dist(query="Oki", target="Osa", wgo$Oki_Osa, dist_type="cophenetic", "Oikopleura"),
+  bp_vs_dist(query="Oki", target="Bar", wgo$Oki_Bar, dist_type="cophenetic", "Oikopleura"),
+  bp_vs_dist(query="Osa", target="Bar", wgo$Osa_Bar, dist_type="cophenetic", "Oikopleura"),
+  
+  bp_vs_dist(query="Ply", target="Rob", wgo$Ply_Rob, dist_type="cophenetic", "Ciona"),
+  bp_vs_dist(query="Ply", target="Sav", wgo$Ply_Sav, dist_type="cophenetic", "Ciona"),
+  bp_vs_dist(query="Rob", target="Sav", wgo$Rob_Sav, dist_type="cophenetic", "Ciona"),
+  
+  bp_vs_dist(query="Dme", target="Dbu", wgo$Dme_Dbu, dist_type="cophenetic", "Drosophila"),
+  bp_vs_dist(query="Dme", target="Dsu", wgo$Dme_Dsu, dist_type="cophenetic", "Drosophila"),
+  #bp_vs_dist(query="Dme", target="Dma", wgo$Dme_Dma, dist_type="cophenetic", "Drosophila"),
+  bp_vs_dist(query="Dme", target="Dya", wgo$Dme_Dya, dist_type="cophenetic", "Drosophila")
+)
+sub_df$species <- factor(sub_df$species, levels=c("Drosophila", "Ciona", "Oikopleura"))
+sub_df <- sub_df[order(sub_df$species, sub_df$breakpoints_per_mbp_scaled),]
+rownames(sub_df) <- NULL
+sub_df$pair <- factor(sub_df$pair, levels=sub_df$pair)
+(sub_df)
+
+ggplot(mya_df) + aes(x=pair, y=breakpoints, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints")
+ggplot(mya_df) + aes(x=pair, y=breakpoints_per_scale, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per million years")
+ggplot(mya_df) + aes(x=pair, y=breakpoints_per_mbp, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned")
+ggplot(mya_df) + aes(x=pair, y=breakpoints_per_mbp_scaled, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned per million years diverged")
+
+ggplot(sub_df) + aes(x=pair, y=breakpoints_per_mbp_scaled, fill=species) + geom_bar(stat='identity') + theme(axis.text.x = element_text(angle=90)) + ggtitle("Number of breakpoints per megabase aligned per substitution distance")
+```
 
 # Session information
 
